2012-12-29  Mark Lillibridge  <mark.lillibridge@hp.com>

	* mail/rmailmm.el (rmail-insert-mime-forwarded-message): Insert
	the undecoded text of the message being forwarded.  (Bug#9521)

2012-12-28  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-set-file-uid-gid): Convert UID and GID to
	integers, if they are real numbers.  (Bug#13282)

2012-12-26  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-indent-beg-re): Only allow "class",
	"module" and "def" to have indentation before them.  Regression
	from 109911 (see the new test).

2012-12-24  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el: Bump the version to 1.2 (Bug#13200).

2012-12-23  Alan Mackenzie  <acm@muc.de>

	Speed up fontification where there's large brace blocks.
	* progmodes/cc-fonts.el (c-font-lock-enclosing-decls): Add a limit
	to a call of c-beginning-of-decl-1.

2012-12-21  Chong Yidong  <cyd@gnu.org>

	* sort.el (sort-subr): Doc fix (Bug#13056).

2012-12-20  Bastien Guerry  <bzg@gnu.org>

	* progmodes/etags.el (tags-search): Fix typo.  Bug #13232.

2012-12-11  Alan Mackenzie  <acm@muc.de>

	Make CC Mode not hang when _some_ lines end in CRLF.  Bug #11841.
	* progmodes/cc-engine.el (c-backward-comments): Add code to work
	around `forward-comment' not recognizing ^M as whitespace.

2012-12-11  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-skeleton-class)
	(python-skeleton-def): Do not add space after defun name.

2012-12-09  Chong Yidong  <cyd@gnu.org>

	* simple.el (set-mark-default-inactive): Mark as obsolete, for
	removal after 24.3.

2012-12-08  Dani Moncayo <dmoncayo@gmail.com>

	* simple.el (just-one-space): Doc fix.

2012-12-07  Eli Zaretskii  <eliz@gnu.org>

	* textmodes/texinfo.el (texinfo-enable-quote-envs): Add
	"smallexample".

2012-12-07  Le Wang  <l26wang@gmail.com>

	* hilit-chg.el (hilit-chg-set-face-on-change): Don't burp in
	narrowed buffer (bug#12361).
