@@ -1,3 +1,8 @@
+2012-12-29  Matt Fidler  <matt.fidler@alcon.com>  (tiny change)
+
+	* emacs-lisp/package.el (package-untar-buffer): Handle problematic
+	tarfile content listings (Bug#13136).
+
 2012-12-29  Mark Lillibridge  <mark.lillibridge@hp.com>
 
 	* mail/rmailmm.el (rmail-insert-mime-forwarded-message): Insert
